Expose tokio-metrics as datafusion plugin stats
Signed-off-by: Ajay Raj Nelapudi <ajnelapu@amazon.com>